# multicoder

./: .gitignore  Makefile.am  config-opt-ffmpeg.sh  configure.ac  mc_buffer.c  mc_buffer.h  mc_demux.c  mc_h264.c  mc_h264_decoder.c  mc_hls.c  mc_hls.h  mc_log.c  mc_model.c  mc_model.h  mc_mux_hls.c  mc_queue.c  mc_queue.h  mc_segname.c  mc_segname.h  mc_sequence.c  mc_sequence.h  mc_util.c  mc_util.h  multicoder.c  multicoder.h  multivod.c
conf/: mc.json  mv.json
t/: .gitignore  Makefile.am  model.c  queue.c  segname.c  sequence  sequence.c  util.c
t/data/: general.json  mc.json
